# bambi_detection

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/: georeferenced_tracking.py
src/alfsdetection/: alfs_detection.py
src/bambi/: bambi_detection.py  comparative_visualization.py  create_visualization.py  dem_upper_austria_downloader.py  drone_geotiff_generator.py  extend_geo_referenced_tracks.py  georeference_deepsort_mot.py  georeference_mot17_tracks.py  georeference_polygons.py  georeference_xyxy_bbs.py  georeferenced_tracking.py  misb_video_converter.py  orthomosaic.py  project_detection_labels.py  reproject_tracks_to_image_space.py  track_analyzer.py  tracks_to_geojson.py  validate_dem.py  visualize_mesh_projection.py  visualize_tracks.py  visualize_tracks_global_and_image.py
src/bambi/ai/: detection.py  inference.py  tracking.py
src/bambi/airdata/: air_data_client.py  air_data_frame_filter.py  air_data_from_exif_parser.py  air_data_from_srt_parser.py  air_data_interpolator.py  air_data_parser.py  air_data_writer.py  interpolated_air_data_parser.py
src/bambi/domain/: camera.py  drone.py  drone_instance.py  manufacturer.py  sensor.py
src/bambi/geo/: gps_exif_writer.py
src/bambi/srt/: srt_merger.py  srt_parser.py  srt_writer.py
src/bambi/thermal/: __init__.py  thermal_colorizer.py  thermal_parser.py
src/bambi/util/: image_utils.py  math.py  projection_util.py
testdata/stpankraz/: .gitignore  DJI_20240822074151_0001_T_point0.SRT  DJI_20240822074745_0002_T_point0.SRT  T_calib.json  correction.json  dem_mesh_r2.json  todo.txt
(+35 files in other folders)
